--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "idf.portWin": "COM7",
+    "idf.portWin": "COM4",
     "idf.adapterTargetName": "esp32",
     "idf.flashType": "UART",
     "files.associations": {
@@ -22,6 +22,11 @@
         "string_view": "c",
         "esp_wifi.h": "c",
         "string.h": "c",
-        "esp_wifi_types.h": "c"
+        "esp_wifi_types.h": "c",
+        "esp_eth.h": "c",
+        "esp_log.h": "c",
+        "sdkconfig.h": "c",
+        "task.h": "c",
+        "stdio.h": "c"
     }
 }
